# dog

./: .gitignore  CMakeLists.txt  PluginInterface.cpp  PluginInterface.h  TODO  a  dog.qbs  dog_export.h  fileservice.cpp  fileservice.h  kernel.cpp  kernel.h  logger.cpp  logger.h  main.cpp
plugins/: CMakeLists.txt
plugins/backup/: backup.cpp  backup.h
plugins/builddircleaner/: builddircleaner.cpp  builddircleaner.h  conf.json  resources.qrc
plugins/coredumps/: coredumps.cpp  coredumps.h
plugins/missingfile/: missingfile.cpp  missingfile.h
plugins/modifiedgit/: modifiedgit.cpp  modifiedgit.h
